<resources>
    <string name="app_name">MyFeelings</string>
    <string name="c_mo_te_sientes_hoy">¿Cómo te sientes hoy?</string>
    <string name="guardar">guardar</string>
    <string name="muy_feliz">Muy Feliz</string>
    <string name="feliz">Feliz</string>
    <string name="neutral">Neutral</string>
    <string name="triste">Triste</string>
    <string name="muy_triste">Muy triste</string>
    <string name="emocion_mas_grande">emocion mas grande</string>
</resources>