<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".MainActivity">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:id="@+id/graph"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c_mo_te_sientes_hoy"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:paddingHorizontal="10dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/bvs"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_verysad"
            />
        <ImageButton
            android:id="@+id/bs"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_sad"
            />
        <ImageButton
            android:id="@+id/bn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_neutral"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            />
        <ImageButton
            android:id="@+id/bh"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_happy"
            />
        <ImageButton
            android:id="@+id/bvh"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_veryhappy"
            />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:background="@drawable/round_button"
        android:text="@string/guardar"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:layout_marginTop="20dp"
        android:id="@+id/grid">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/muy_feliz"
            android:layout_marginEnd="15dp"
            />
        <View
            android:layout_height="20dp"
            android:layout_width="250dp"
            android:id="@+id/tvh"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/feliz"
            android:layout_marginEnd="15dp"
            />
        <View
            android:layout_height="20dp"
            android:layout_width="250dp"
            android:id="@+id/th"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/neutral"
            android:layout_marginEnd="15dp"
            />
        <View
            android:layout_height="20dp"
            android:layout_width="250dp"
            android:id="@+id/tn"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/triste"
            android:layout_marginEnd="15dp"
            />
        <View
            android:layout_height="20dp"
            android:layout_width="250dp"
            android:id="@+id/ts"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/muy_triste"
            android:layout_marginEnd="15dp"
            />
        <View
            android:layout_height="20dp"
            android:layout_width="250dp"
            android:id="@+id/tvs"/>

    </GridLayout>


</LinearLayout>